crates/lingui_macro/tests/snapshots/use_lingui__js_use_lingui_hook.snap
---
source: crates/lingui_macro/tests/use_lingui.rs
---
import { useLingui } from "@lingui/react/macro";

const bla1 = () => {
   console.log()
}

 function bla() {
   const { t, i18n } = useLingui();
   t`Refresh inbox`;
 }

↓ ↓ ↓ ↓ ↓ ↓

import { useLingui as $_useLingui } from "@lingui/react";
const bla1 = ()=>{
    console.log();
};
function bla() {
    const { i18n, _: $__ } = $_useLingui();
    $__(/*i18n*/ {
        id: "EsCV2T",
        message: "Refresh inbox"
    });
}
