crates/lingui_macro/tests/snapshots/use_lingui__support_nested_macro_when_in_arrow_function_issue_2095.snap
---
source: crates/lingui_macro/tests/use_lingui.rs
---
import { plural } from '@lingui/core/macro'
import { useLingui } from '@lingui/react/macro'

const MyComponent = () => {
  const { t } = useLingui();
  const a = t`Text ${plural(users.length, {
          offset: 1,
          0: "No books",
          1: "1 book",
          other: "\# books"
        })}`;
}

↓ ↓ ↓ ↓ ↓ ↓

import { useLingui as $_useLingui } from "@lingui/react";
const MyComponent = ()=>{
    const { _: $__ } = $_useLingui();
    const a = $__(/*i18n*/ {
        id: "hJRCh6",
        message: "Text {0, plural, offset:1 =0 {No books} =1 {1 book} other {# books}}",
        values: {
            0: users.length
        }
    });
};
