crates/lingui_macro/tests/snapshots/use_lingui__support_passing_t_in_shorthand_object_property.snap
---
source: crates/lingui_macro/tests/use_lingui.rs
---
import { useLingui } from '@lingui/react/macro';

function useGreeting(format) {
  const { t } = useLingui();
  return format({ t });
}

↓ ↓ ↓ ↓ ↓ ↓

import { useLingui as $_useLingui } from "@lingui/react";
function useGreeting(format) {
    const { _: $__ } = $_useLingui();
    return format({
        t: $__
    });
}
