crates/lingui_macro/tests/snapshots/use_lingui__support_passing_t_variable_as_dependency.snap
---
source: crates/lingui_macro/tests/use_lingui.rs
---
import { useLingui } from '@lingui/react/macro';

function MyComponent() {
  const { t } = useLingui();
  const a = useMemo(() => t`Text`, [t]);
}

↓ ↓ ↓ ↓ ↓ ↓

import { useLingui as $_useLingui } from "@lingui/react";
function MyComponent() {
    const { _: $__ } = $_useLingui();
    const a = useMemo(()=>$__(/*i18n*/ {
            id: "xeiujy",
            message: "Text"
        }), [
        $__
    ]);
}
