crates/lingui_macro/tests/snapshots/use_lingui__work_when_t_is_not_used.snap
---
source: crates/lingui_macro/tests/use_lingui.rs
---
import { useLingui } from '@lingui/react/macro';

function MyComponent() {
  const { i18n } = useLingui();
  console.log(i18n);
}

↓ ↓ ↓ ↓ ↓ ↓

import { useLingui as $_useLingui } from "@lingui/react";
function MyComponent() {
    const { i18n, _: $__ } = $_useLingui();
    console.log(i18n);
}
