crates/lingui_macro/tests/snapshots/use_lingui__work_with_components_defined_as_arrow_function.snap
---
source: crates/lingui_macro/tests/use_lingui.rs
---
import { useLingui } from '@lingui/react/macro';

const MyComponent = () => {
  const { t } = useLingui();
  const a = t`Text`;
}

↓ ↓ ↓ ↓ ↓ ↓

import { useLingui as $_useLingui } from "@lingui/react";
const MyComponent = ()=>{
    const { _: $__ } = $_useLingui();
    const a = $__(/*i18n*/ {
        id: "xeiujy",
        message: "Text"
    });
};
