crates/lingui_macro/tests/snapshots/use_lingui__work_with_existing_use_lingui_statement.snap
---
source: crates/lingui_macro/tests/use_lingui.rs
---
import { useLingui as useLinguiMacro } from '@lingui/react/macro';
import { useLingui } from '@lingui/react';

function MyComponent() {
  const { _ } = useLingui();

  console.log(_);
  const { t } = useLinguiMacro();
  const a = t`Text`;
}

↓ ↓ ↓ ↓ ↓ ↓

import { useLingui as $_useLingui } from "@lingui/react";
import { useLingui } from '@lingui/react';
function MyComponent() {
    const { _ } = useLingui();
    console.log(_);
    const { _: $__ } = $_useLingui();
    const a = $__(/*i18n*/ {
        id: "xeiujy",
        message: "Text"
    });
}
