crates/lingui_macro/tests/snapshots/use_lingui__work_with_multiple_react_components.snap
---
source: crates/lingui_macro/tests/use_lingui.rs
---
import { useLingui } from '@lingui/react/macro';

function MyComponent() {
  const { t } = useLingui();
  const a = t`Text`;
}

function MyComponent2() {
  const { t } = useLingui();
  const b = t`Text`;
}

↓ ↓ ↓ ↓ ↓ ↓

import { useLingui as $_useLingui } from "@lingui/react";
function MyComponent() {
    const { _: $__ } = $_useLingui();
    const a = $__(/*i18n*/ {
        id: "xeiujy",
        message: "Text"
    });
}
function MyComponent2() {
    const { _: $__ } = $_useLingui();
    const b = $__(/*i18n*/ {
        id: "xeiujy",
        message: "Text"
    });
}
